--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <div id="user_nav">
     <% if current_user %>
       Logged in as <%= current_user.name %>
+      <%= link_to "Profile", current_user %>
       <%= link_to "Log Out", session_path("current"), method: "delete" %>
     <% else %>
       <%= link_to "Register", new_user_path %> or
