--- a/app/views/trips/_form_field.html.erb
+++ b/app/views/trips/_form_field.html.erb
@@ -1,4 +1,4 @@
-<div class="remove_link">  
+<div class="remove_field">  
   <%= ff.hidden_field :_destroy %>
-  <%= link_to "remove", "javascript:void(0);", id: "remove_link" %>
+  <%= link_to "remove", id: "remove_field" %>
 </div>
